[package]
name = "openssl-ktls-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tokio.workspace = true
openssl = { workspace = true, features = ["vendored"] , default-features = false}
openssl-sys = { workspace = true, features = ["vendored"] , default-features = false}
openssl-ktls.workspace = true
foreign-types-shared.workspace = true

[dev-dependencies]
tokio-util.workspace = true
rand.workspace = true


[build-dependencies]
openssl-src = { workspace = true, features = ["ktls"], default-features = false }
