[package]
name = "openssl-ktls"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["youyuanwu@outlook.com"]
repository = "https://github.com/youyuanwu/rust-openssl-ktls"
documentation = "https://docs.rs/openssl-ktls/latest/openssl_ktls/"
description = "Openssl KTLS support (with tokio)"
categories = ["web-programming", "network-programming"]
keywords = ["openssl", "tls", "ktls"]
readme = "../README.md"

[dependencies]
openssl = { workspace = true, features = ["vendored"] , default-features = false}
openssl-sys = { workspace = true, features = ["vendored"] , default-features = false}
foreign-types-shared.workspace = true
tokio = { workspace = true, features = ["net", "io-util"], optional = true}

[features]
default = ["tokio", "vendored"]
# enable tokio support
tokio = ["dep:tokio"]
# use openssl built from source with ktls support
vendored = ["openssl/vendored", "openssl-sys/vendored", "openssl-src/ktls"]

[build-dependencies]
openssl-src = { workspace = true, features = ["ktls"], default-features = false , optional = true}